# lexicon

./: .dockerignore  .gitignore  CMakeLists.txt  DockerSetup.md  Dockerfile  Dockerfile.postgres  LICENSE  Makefile  README.md  cache.c  cache.h  cli.c  cli.h  docker-compose.yml  index.html  lexicon.c  logger.c  pdf.c  pdf_preprocess.c  pdfium.supp  pdfsearch.c  routes.c  run.sh
include/: ai.h  cli.h  database.h  error_macros.h  json_allocator.h  json_response.h  logger.h  pdf.h  pdf_indexer.h  pdf_preprocess.h  routes.h
pdfsearch/: README.md  index.html  package-lock.json  tsconfig.app.json  tsconfig.node.json
pdfsearch/src/: App.svelte  FilesList.svelte  Modal.svelte  PDFLogo.svelte  SearchSection.svelte  types.d.ts
pdfsearch/src/lib/: httpclient.ts
scripts/: backup.sh  finddups.sh  init-db.sql  install_rum.sh  restore.sh
src/: ai.c  cli.c  database.c  json_allocator.c  json_response.c  lexicon.c  logger.c  main.c  pdf.c  pdf_indexer.c  pdf_preprocess.c  routes.c
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/public/: site.webmanifest  sw.js
ui/src/: App.svelte  FilesList.svelte  Logo.svelte  Modal.svelte  SearchResults.svelte  SearchSection.svelte  app.css  main.ts  sw.js  types.d.ts
ui/src/lib/: httpclient.ts  localstorage.svelte.ts
